[Fix] Delete slugMenus
